# lingua-js

./: README.md  package-lock.json  package.json
lib/: index.js  language.js  languages.json
native/: Cargo.toml  build.rs
native/src/: lib.rs  lib_.rs  lib__.rs
